# Terminal-Blackjack

./: README.md  main.py  pyproject.toml  requirements.txt  verify_storage.py  verify_storage_v2.py
blackjack/: __init__.py  about.py  game_logic.py  trivia.py  ui.py
legacy_v1/: main.py
questions/: template.json
src/blackjack/: __main__.py  game_logic.py  storage.py  trivia.py  ui.py
src/blackjack/models/: card.py  player.py
tests/: test_models.py  test_storage.py
