[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-blackjack"
version = "0.1.0"
description = "A terminal-based Blackjack game"
readme = "README.md"
authors = [{ name = "szxivk", email = "szxivk@notmyemail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich",
    "questionary",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
pybjack = "blackjack.__main__:main"
blackjack = "blackjack.__main__:main"

[project.urls]
"Homepage" = "https://github.com/szxivk/Terminal-Blackjack"
